--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, nofollow">
   <title>Yoshi M.</title>
 </head>
 <body>
   <h1>Yoshi M.</h1>
   <p>Undergraduate student in physics.</p>
+  <p>
+    This site contains personal study notes and is not intended for public distribution.
+  </p>
 </body>
 </html>
