--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
   <h1>Yoshi M.</h1>
   <p>Undergraduate student in physics.</p>
+  
+  <ul>
+    <li><a href="research/">Research</a></li>
+    <li><a href="notes/">Notes</a></li>
+  </ul>
+  
   <p>
     This site contains personal study notes and is not intended for public distribution.
   </p>
